<resources>
    <string name="app_name">PADReader</string>
    <string name="app_description">Paper analytical devices (PADs) are test cards that can quickly determine whether a drug tablet contains the correct medicines. They are cheap and easy to use. They don\'t require power, chemicals, solvents, or any expensive instruments, so they can be deployed rapidly at large scale whereever a problem with pharmaceutical quality is suspected.</string>
    <string name="stored_drug_string">Drug name (tap to enter):</string>
    <string name="drug_wheel_label">Drug Name</string>
    <string name="stated_drug_title">Stated Drug</string>
    <string name="brand_string">Concentration</string>
    <string name="stated_concentration">Concentration:</string>
    <string name="batch_string">Predicted Drug</string>
    <string name="drug_found">Drug Found:</string>
    <string name="drug_concentration">Drug Concentration (NN model):</string>
    <string name="pls_concentration">Drug Concentration (PLS model):</string>
    <string name="upload">Upload</string>
    <string name="cancel">Discard</string>
    <string name="cont">Continue</string>
    <string name="maininstructions">Use the alignment squares to center the image and hold the phone very steady.  When a clear image is possible you will be notified.</string>
    <string name="appsettings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="activity_result">Result</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="homepage_label">PAD Project Home</string>
    <string name="okstring">OK</string>
    <string name="settings_help">Settings Help</string>
    <!--Help Strings    -->
    <string name="username_help">What name to report when uploading images.</string>
    <string name="project_help">Select the project to report for.</string>
    <string name="primarynet_help">The primary inference model for classifying drugs.</string>
    <string name="concentrationnet_help">For use only with concentration based inference models.</string>
    <string name="pls_help">Use Partial Least Squares concentration calculation.  Only for drugs in the FHI 360 project.</string>
    <string name="flashlight_help">Use the flash as a light when the camera is on.</string>
    <string name="updates_help">Keep the projects and neural net lists up to date.</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="projectsettings">Project Settings</string>
    <string name="user_name">User Name</string>
    <string name="drugclassifier">Drug Classifier</string>
    <string name="secondary_network">Concentration Classifier</string>
    <string name="use_pls">Use PLS</string>
    <string name="pls_model">PLS Model</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Check for project updates?</string>
    <string name="attachment_title">Enqueue uploads for later?</string>
    <string name="attachment_summary_on">Save images for upload later
    </string>
    <string name="attachment_summary_off">Only send images when connected</string>
    <string name="category_name">Project</string>
    <string name="project">Project:</string>
    <string name="neuralnet">Neural Net</string>
    <string name="neural_net_label">Classifier:</string>
    <string name="concentration_classifier_label">Conc. Classifier:</string>
    <string name="pls_classifier_label">PLS File:</string>
    <string name="marker_type_label">Marker Type</string>
    <string name="category">Category</string>
    <string name="title_activity_queue">Upload Queue</string>
    <string name="button_label_queue">Queue</string>
    <string name="donetext">Done</string>
    <string name="no_model_set">Please select a neural network on the Settings page.</string>
    <string name="no_project_set">Please select a project on the Settings page.</string>
    <string name="okno">Okay</string>
    <string name="okyes">Suspicious</string>
    <string name="oktoconsume">Suspicious?</string>
    <string name="safetoconsume">Suspected Safe</string>
    <string name="unsafetoconsume">Suspected Unsafe</string>
    <string name="notes">Notes (brand + lot #):</string>
    <string name="camera">Camera</string>
    <string name="torchonwithcamera">Flashlight</string>
    <string name="pleasewaitdownload">Please wait for neural net download to complete.</string>
    <string name="pendingqueue">Pending</string>
    <string name="finishedqueue">Finished</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_artifacts">ArtifactsActivity</string>
</resources>