<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflowmenu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title=""
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/action_settings"
                />
            <item
                android:id="@+id/menu_queue"
                android:icon="@drawable/ic_baseline_upgrade_24"
                android:title="@string/title_activity_queue"
                />
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_baseline_info_blue_24"
                android:title="@string/about"
                />
        </menu>

    </item>

</menu>