<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E2E4"
    android:fitsSystemWindows="true"
    tools:context=".ResultActivity"
    tools:layout_editor_absoluteY="81dp">

    <!--    <androidx.appcompat.widget.Toolbar-->
    <!--        android:id="@+id/my_toolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="57dp"-->
    <!--        android:background="?attr/colorPrimary"-->
    <!--        android:elevation="4dp"-->
    <!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
    <!--    </androidx.appcompat.widget.Toolbar>-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <!--
        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="sendEmail"
            android:text="@string/upload" />
            -->

        <!--        <Button-->
        <!--            android:id="@+id/button"-->
        <!--            android:layout_width="180dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1"-->
        <!--            android:paddingBottom="5dp"-->
        <!--            android:onClick="discardData"-->
        <!--            android:textColor="#FF0000"-->
        <!--            android:textSize="24dp"-->
        <!--            app:icon="@drawable/ic_baseline_delete_forever_24"-->
        <!--            app:iconTint="#FF0000"-->
        <!--            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"-->
        <!--            android:text="@string/cancel" />-->

        <!--        <Button-->
        <!--            android:id="@+id/button2"-->
        <!--            android:layout_width="180dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_weight="1"-->
        <!--            android:paddingBottom="5dp"-->
        <!--            android:onClick="saveData"-->
        <!--            android:textColor="#000FFF"-->
        <!--            android:textSize="24dp"-->
        <!--            app:icon="@drawable/ic_baseline_send_24"-->
        <!--            app:iconTint="#000FFF"-->
        <!--            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"-->
        <!--            android:text="@string/upload" />-->
    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingBottom="10sp">

            <TextView
                android:id="@+id/idText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:text="SampleID" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="timestamp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:layout_weight="3"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="saveData"
                    android:paddingTop="10sp"
                    android:paddingEnd="22sp"
                    android:paddingBottom="10sp"
                    android:text="@string/upload"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:backgroundTint="@android:color/holo_blue_dark"
                    app:icon="@drawable/ic_baseline_send_24"
                    app:iconTint="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="discardData"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:backgroundTint="@android:color/holo_red_dark"
                    app:icon="@drawable/ic_baseline_delete_forever_24"
                    app:iconTint="@android:color/white" />


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/batchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="8dp"

            android:text="@string/batch_string" />


        <TextView
            android:id="@+id/predicteddrugtext"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="10sp"

            android:background="#FFFFFF"
            android:paddingLeft="8dp" />

        <Switch
            android:id="@+id/oktoconsumetoggleswitch"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="10sp"
            android:background="#FFFFFF"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:showText="true"
            android:splitTrack="true"
            android:text="@string/oktoconsume"
            android:textOff="@string/okno"
            android:textOn="@string/okyes"
            android:thumb="@drawable/pill_toggle_thumb"
            android:thumbTextPadding="10dp"
            android:track="@drawable/pill_toggle_track" />

        <TextView
            android:id="@+id/drugView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="8dp"

            android:text="@string/stored_drug_string" />

        <Spinner
            android:id="@+id/drugSpinner"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="10sp"
            android:background="#FFFFFF"
            android:dropDownHeight="wrap_content" />

        <TextView
            android:id="@+id/brandView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingLeft="8dp"

            android:text="@string/brand_string" />

        <Spinner
            android:id="@+id/brandSpinner"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="10sp"
            android:background="#FFFFFF"
            android:dropDownHeight="wrap_content" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingStart="8dp"

            android:text="@string/notes" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="3"
            android:scrollbars="vertical"
            android:layout_marginBottom="20sp"/>

    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>